riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_async_function_returning_string.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_function(&func, \"riff\")"
---
public func fetchData(url: String) async throws -> String {
    let futureHandle = url.withCString { urlPtr in riff_fetch_data_start(UnsafeRawPointer(urlPtr).assumingMemoryBound(to: UInt8.self), UInt(url.utf8.count)) }

    typealias FutureContext = FfiFutureState<String>
    let state = FutureContext(handle: futureHandle)

    return try await withTaskCancellationHandler {
        try await withCheckedThrowingContinuation { continuation in
            guard state.installContinuation(continuation) else {
                continuation.resume(throwing: CancellationError())
                return
            }

            func poll(ctx: FutureContext) {
                guard ctx.canPoll() else { return }
                riff_fetch_data_poll(ctx.handle, UInt64(UInt(bitPattern: Unmanaged.passRetained(ctx).toOpaque()))) { callbackData, pollResult in
                    let ctx = Unmanaged<FutureContext>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(callbackData))!).takeRetainedValue()
                    if pollResult == 0 {
                        let decision = ctx.decideFinish()
                        if case .alreadyFinished = decision { return }
                        var status = FfiStatus()
                        let buf = riff_fetch_data_complete(ctx.handle, &status)
                        riff_fetch_data_free(ctx.handle)
                        switch decision {
                        case .finishWithContinuation(let continuation):
                            if status.code != 0 {
                                riff_free_buf_u8(buf)
                                continuation.resume(throwing: FfiError(message: "ffi call failed"))
                            } else {
                                let wire = WireBuffer(ptr: buf.ptr!, len: Int(buf.len))
                                riff_free_buf_u8(buf)
                                continuation.resume(returning: wire.readString(at: 0).value)
                            }
                        case .finishWithoutContinuation:
                            riff_free_buf_u8(buf)
                        case .alreadyFinished:
                            break
                        }
                    } else {
                        guard ctx.canPoll() else { return }
                        Task { [ctx] in
                            await Task.yield()
                            poll(ctx: ctx)
                        }
                    }
                }
            }
            poll(ctx: state)
        }
    } onCancel: {
        let decision = state.decideFinish()
        switch decision {
        case .alreadyFinished:
            break
        case .finishWithoutContinuation:
            riff_fetch_data_cancel(state.handle)
            riff_fetch_data_free(state.handle)
        case .finishWithContinuation(let continuation):
            riff_fetch_data_cancel(state.handle)
            riff_fetch_data_free(state.handle)
            continuation.resume(throwing: CancellationError())
        }
    }
}
