riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_async_function_with_multiple_params.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_function(&func, \"riff\")"
---
public func uploadFile(path: String, to destination: String) async throws -> String {
    var path = path
    var destination = destination
    let futureHandle = path.withUTF8 { pathBuf in destination.withUTF8 { destinationBuf in riff_upload_file_start(pathBuf.baseAddress!, UInt(pathBuf.count), destinationBuf.baseAddress!, UInt(destinationBuf.count)) } }

    return try await riffAsyncCall(
        futureHandle: futureHandle,
        pollFn: riff_upload_file_poll,
        completeFn: riff_upload_file_complete,
        cancelFn: riff_upload_file_cancel,
        freeFn: riff_upload_file_free
    ) { buf, status in
        guard status.code == 0 else { riff_free_buf_u8(buf); throw FfiError(message: "ffi call failed") }
        defer { riff_free_buf_u8(buf) }
        return riffDecodeOwnedBuf(buf.ptr, Int(buf.len)) { reader in reader.readString() }
    }
}
