riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_callback_with_async_method.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: render_callback(&callback)
---
public protocol AsyncHandler: AnyObject {
    func onComplete(result: String) async
}

private class AsyncHandlerWrapper {
    let impl_: AsyncHandler
    init(_ impl_: AsyncHandler) { self.impl_ = impl_ }
}

private var asyncHandlerVtable: AsyncHandlerVtable = {
    AsyncHandlerVtable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<AsyncHandlerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<AsyncHandlerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        on_complete: { handle, resultPtr, resultLen, callback, callbackData in
            guard handle != 0 else { return }
            let wrapper = Unmanaged<AsyncHandlerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            let result = String(decoding: UnsafeBufferPointer(start: resultPtr, count: Int(resultLen)), as: UTF8.self)
            Task {
                await wrapper.impl_.onComplete(result: result)
                callback?(callbackData, FfiStatus(code: 0))
            }
        }
    )
}()

enum AsyncHandlerBridge {
    private static var isRegistered = false

    static func register() {
        guard !isRegistered else { return }
        riff_register_async_handler(&asyncHandlerVtable)
        isRegistered = true
    }

    static func create(_ impl: AsyncHandler) -> RiffCallbackHandle {
        register()
        let wrapper = AsyncHandlerWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return riff_create_async_handler(handle)
    }
}
