riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_class_with_async_method.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_class(&cls, \"riff\")"
---
public final class HttpClient {
    let handle: OpaquePointer

    init(handle: OpaquePointer) {
        self.handle = handle
    }

    deinit {
        riff_http_client_free(handle)
    }

    public func fetch(url: String) async throws -> Data {
        let futureHandle = url.withCString { urlPtr in riff_http_client_fetch_start(handle, UnsafeRawPointer(urlPtr).assumingMemoryBound(to: UInt8.self), UInt(url.utf8.count)) }

        typealias FutureContext = FfiFutureState<Data>
        let state = FutureContext(handle: futureHandle)

        return try await withTaskCancellationHandler {
            try await withCheckedThrowingContinuation { continuation in
                guard state.installContinuation(continuation) else {
                    continuation.resume(throwing: CancellationError())
                    return
                }

                func poll(ctx: FutureContext) {
                    guard ctx.canPoll() else { return }
                    riff_http_client_fetch_poll(ctx.handle, UInt64(UInt(bitPattern: Unmanaged.passRetained(ctx).toOpaque()))) { callbackData, pollResult in
                        let ctx = Unmanaged<FutureContext>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(callbackData))!).takeRetainedValue()
                        if pollResult == 0 {
                            let decision = ctx.decideFinish()
                            if case .alreadyFinished = decision { return }
                            var status = FfiStatus()
                            let buf = riff_http_client_fetch_complete(ctx.handle, &status)
                            riff_http_client_fetch_free(ctx.handle)
                            switch decision {
                            case .finishWithContinuation(let continuation):
                                if status.code != 0 {
                                    riff_free_buf_u8(buf)
                                    continuation.resume(throwing: FfiError(message: "ffi call failed"))
                                } else {
                                    let wire = WireBuffer(ptr: buf.ptr!, len: Int(buf.len))
                                    riff_free_buf_u8(buf)
                                    continuation.resume(returning: wire.readBytesWithSize(at: 0).value)
                                }
                            case .finishWithoutContinuation:
                                riff_free_buf_u8(buf)
                            case .alreadyFinished:
                                break
                            }
                        } else {
                            guard ctx.canPoll() else { return }
                            Task { [ctx] in
                                await Task.yield()
                                poll(ctx: ctx)
                            }
                        }
                    }
                }
                poll(ctx: state)
            }
        } onCancel: {
            let decision = state.decideFinish()
            switch decision {
            case .alreadyFinished:
                break
            case .finishWithoutContinuation:
                riff_http_client_fetch_cancel(state.handle)
                riff_http_client_fetch_free(state.handle)
            case .finishWithContinuation(let continuation):
                riff_http_client_fetch_cancel(state.handle)
                riff_http_client_fetch_free(state.handle)
                continuation.resume(throwing: CancellationError())
            }
        }
    }

}
