riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_class_with_documented_constructors_and_method.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_class(&cls, \"riff\")"
---
/// A persistent key-value data store.
public final class DataStore {
    let handle: OpaquePointer

    init(handle: OpaquePointer) {
        self.handle = handle
    }

    /// Creates a new data store with the given capacity.
    public init(capacity: Int32) {
        let ptr = riff_data_store_new(capacity)!
        self.handle = ptr
    }

    /// Creates a data store with sensible default settings.
    public static func withDefaults() -> DataStore {
        let ptr = riff_data_store_with_defaults()!
        return DataStore(handle: ptr)
    }

    deinit {
        riff_data_store_free(handle)
    }

    /// Inserts a value into the store by key.
    public func insert(key: String) {
        _ = key.withCString { keyPtr in
            riff_data_store_insert(handle, UnsafeRawPointer(keyPtr).assumingMemoryBound(to: UInt8.self), UInt(key.utf8.count))
        }
    }

}
