riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_class_with_fallible_constructor.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_class(&cls, \"riff\")"
---
public final class Connection {
    let handle: OpaquePointer

    init(handle: OpaquePointer) {
        self.handle = handle
    }

    public init(url: String) throws {
        guard let ptr = url.withCString { urlPtr in riff_connection_open(UnsafeRawPointer(urlPtr).assumingMemoryBound(to: UInt8.self), UInt(url.utf8.count)) } else {
            throw FfiError(message: takeLastErrorMessage())
        }
        self.handle = ptr
    }

    deinit {
        riff_connection_free(handle)
    }

}
