riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_class_with_nullable_handle_return.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_class(&cls, \"riff\")"
---
public final class Cache {
    let handle: OpaquePointer

    init(handle: OpaquePointer) {
        self.handle = handle
    }

    deinit {
        riff_cache_free(handle)
    }

    public func get(key: String) -> CacheEntry? {
        return key.withCString { keyPtr in
            guard let ptr = riff_cache_get(handle, UnsafeRawPointer(keyPtr).assumingMemoryBound(to: UInt8.self), UInt(key.utf8.count)) else { return nil }
            return CacheEntry(handle: ptr)
        }
    }

}
