riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_class_with_static_method.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_class(&cls, \"riff\")"
---
public final class Logger {
    let handle: OpaquePointer

    init(handle: OpaquePointer) {
        self.handle = handle
    }

    deinit {
        riff_logger_free(handle)
    }

    public static func getDefault() -> Logger {
        let ptr = riff_logger_get_default()!
        return Logger(handle: ptr)
    }

}
