riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_class_with_stream.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_class(&cls, \"riff\")"
---
public final class EventSource {
    let handle: OpaquePointer

    init(handle: OpaquePointer) {
        self.handle = handle
    }

    deinit {
        riff_event_source_free(handle)
    }

    public func events() -> AsyncStream<String> {
        AsyncStream<String> { continuation in
            guard let subscription = riff_event_source_events_subscribe(self.handle) else {
                continuation.finish()
                return
            }
            let context = WireStreamContextBase(
                subscription: subscription, batchSize: 16,
                popBatch: riff_event_source_events_pop_batch,
                poll: riff_event_source_events_poll,
                unsubscribe: riff_event_source_events_unsubscribe,
                freeFn: riff_event_source_events_free,
                freeBuf: riff_free_buf_u8,
                atomicCas: riff_atomic_u8_cas,
                processItems: { wire in
                    let count = Int(wire.readU32(at: 0))
                    var offset = 4
                    for _ in 0..<count {
                        let item = wire.readString(at: 0).value
                        _ = continuation.yield(item)
                    }
                },
                finish: { continuation.finish() }
            )
            continuation.onTermination = { @Sendable _ in context.requestTermination() }
            context.start()
        }
    }
}
